# kuh-handel

./: .gitignore  Cargo.toml  README.md  how_to_publish_package.txt  stats.html  ws_client.py
kuh-handel-frontend/: Cargo.toml  Trunk.toml  index.html
kuh-handel-frontend/src/: app.rs  main.rs  types.rs
kuh-handel-lib/: Cargo.toml  README.md
kuh-handel-lib/src/: animals.rs  client.rs  game_errors.rs  lib.rs  player.rs
kuh-handel-lib/src/messages/: actions.rs  game_updates.rs  message_protocol.rs
kuh-handel-lib/src/money/: money.rs  value.rs  wallet.rs
kuh-handel-lib/src/player/: base_player.rs  leon_bot.rs  player_actions.rs  player_error.rs  random_player.rs  simple_player.rs  supervised_player.rs  wallet.rs
kuh-handel-lib/src/player/player_actions/: random_actions.rs
kuh-handel-server/: Cargo.toml  README.md
kuh-handel-server/src/: backend_api.rs  game_error.rs  main.rs  model.rs  server_side_player.rs
kuh-handel-server/src/model/: game_factory.rs  game_logic.rs  match_making.rs
kuh-handel-server/src/server_side_player/: supervised_player.rs  websocket_actions.rs
kuh-handel-test-client/: Cargo.toml
kuh-handel-test-client/src/: main.rs  simple_player.rs
pyhandel/: Cargo.toml  README.md  pyproject.toml  python_client.py
pyhandel-stubs/: README.md  pyproject.toml
pyhandel-stubs/pyhandel-stubs/: __init__.pyi  animals.pyi  client.pyi
pyhandel-stubs/pyhandel-stubs/messages/: __init__.pyi  actions.pyi  game_updates.pyi  message_protocol.pyi
pyhandel-stubs/pyhandel-stubs/player/: __init__.pyi  player_actions.pyi  random_player.pyi  simple_player.pyi  wallet.pyi
pyhandel/pyhandel/: __init__.py  __init__.pyi  animals.pyi  client.pyi  pyhandel.pyi
pyhandel/pyhandel/messages/: __init__.py  actions.pyi  game_updates.pyi
pyhandel/pyhandel/player/: __init__.py  __init__.pyi  base_player.pyi  player_actions.pyi  random_player.pyi
pyhandel/pyhandel/pyplayer/: __init__.pyi
pyhandel/src/: lib.rs  py_animals.rs  py_client.rs  py_messages.rs  py_player.rs
pyhandel/src/py_messages/: py_actions.rs  py_game_updates.rs  py_message_protocol.rs
pyhandel/src/py_player/: py_base_player.rs  py_player_actions.rs  py_random_player.rs  py_simple_player.rs  py_wallet.rs
src/: backend_api.rs  client.rs  lib.rs  main.rs  messages.rs  model.rs  my_bot.rs
src/client/: MyBot.rs  client.rs  my_bot.rs
src/client_side/: client.rs  my_bot.rs
src/messages/: actions.rs  game_updates.rs  message_protocol.rs
src/model/: animals.rs  game_errors.rs  game_factory.rs  game_logic.rs  money.rs  player.rs
src/model/money/: money.rs  value.rs  wallet.rs
src/model/player/: base_player.rs  player_actions.rs  player_group.rs  player_supervisor.rs  supervised_player.rs
src/model/player/player_actions/: actions.rs  base_player_actions.rs  game_updates.rs  random_actions.rs  websocket_actions.rs
