[package]
name = "kuh-handel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-macros = "0.5.0"
futures-util = "0.3.31"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = {version = "1.0.227", features = ["derive"]}
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
