[workspace]
members = [
    "kuh-handel-server",
    "kuh-handel-lib",
    "kuh-handel-test-client"
]

[workspace.dependencies]
serde = {version = "1.0.227", features = ["derive", "rc"]}
serde_json = "1.0.145"
serde_with = { version = "3", features = ["macros"] }
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = {version="0.21", features = ["native-tls"]}
rand = "0.9.2"
rand_chacha = "0.9.0"