[package]
name = "kuh-handel-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = {workspace = true}
futures-util = {workspace = true}
tokio-tungstenite = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}