[package]
name = "kuh-handel-server"
version = "0.1.0"
edition = "2024"

[dependencies]
kuh-handel-lib = {path = "../kuh-handel-lib"}

futures-util = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_with = {workspace = true}
tokio-tungstenite = {workspace = true}
tokio = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}
async_recursion = "1.1"
axum = { version = "0.8.4", features = ["ws"] }
axum-macros = "0.5.0"

indicatif = "0.18.2"



tower-http = { version = "0.6.6", features = ["cors"] }
url = "2"


tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"