[package]
name = "kuh-handel-server"
version = "0.2.0"
edition = "2024"
description = "The server code for the Kuh-Handel game"
license = "MIT"

[dependencies]
kuh-handel-lib = {path = "../kuh-handel-lib"}

futures-util = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_with = {workspace = true}
serde-aux = "4.5"
tokio-tungstenite = {workspace = true}
tokio = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}

axum = { version = "0.8.4", features = ["ws"] }
axum-macros = "0.5.0"

indicatif = "0.18.2"



tower-http = { version = "0.6.6", features = ["cors"] }
url = "2"


tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"