[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhandel-stubs"
version = "0.1.24"
description = "Type stubs for pyhandel library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Typing :: Typed",
]

[tool.setuptools.packages.find]
include = ["pyhandel-stubs*"]