[package]
name = "pyhandel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyhandel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.25.0", features = ["extension-module", "experimental-async"]}
kuh-handel-lib = {path = "../kuh-handel-lib"}
